@@ -162,6 +162,7 @@ rwtestAllXml() {
       rwtestXml testNotesRests1.xml
       rwtestXml testNotesRests2.xml
       rwtestXmlRef testPartsSpecialCases.xml
+      rwtestXml testStaffTwoKeySigs.xml
       rwtestXml testSystemBrackets1.xml
       rwtestXml testSystemBrackets2.xml
       rwtestXml testTempo1.xml
