@@ -1,3 +1,7 @@
+9.oct (lv)
+      - fix #12382: [MusicXML] Key Signature for 2 Staves
+      - fix crash reading MusicXML file with different key signatures on the first staff and second staff
+      - add MusicXML testfile for issue 12382 ("Key Signature for 2 Staves")
 4.oct (ws)
       - fix regression from 30.sep change
 30.sep (ws)
